src/blocks/pricing-table/styles/editor.scss
.editor-block-list__block[data-type="coblocks/pricing-table"] {
	.wp-block-coblocks-pricing-table {
		&__inner {
			margin-left: 0 !important;
			margin-right: 0 !important;
		}

		.editor-inner-blocks {
			width: 100%;

			> .editor-block-list__layout {
				@media (min-width: 600px) {
					display: flex;
					flex: 0 1 auto;
					flex-direction: row;
					flex-wrap: wrap;
					position: relative;
				}

				.wp-block:nth-of-type(3) .wp-block-coblocks-pricing-table-item,
				.wp-block:nth-of-type(4) .wp-block-coblocks-pricing-table-item {
					margin-top: 30px;
				}
			}
		}
	}

	.editor-block-mover,
	.block-list-appender {
		display: none;
	}

	&[data-align="wide"],
	&[data-align="full"] {
		.editor-block-list__block {
			max-width: none;
		}
	}

	.wp-block:nth-of-type(3),
	.wp-block:nth-of-type(4) {
		margin-bottom: 30px;
		margin-top: 30px;
	}

	.wp-block[data-type="coblocks/pricing-table-item"] {
		@media (min-width: 600px) {
			flex-basis: 40%;
			flex-grow: 1;
			max-width: 100%;
		}
	}
}

.components-toolbar-coblocks-numeral-controls {
	display: inline-flex;

	.components-button[data-subscript]::after {
		bottom: 0.68em;
		font-size: 17px;
		right: 13px;
	}

	.components-button[data-subscript="1"]::after {
		right: 14px;
	}
}

